05_squares/grade.txt
Grading at Sun Sep 13 05:44:32 UTC 2020
Trying to compile your code and link with squares_test.o
squares.c: In function ‘squares’:
squares.c:57:76: error: ‘size’ undeclared (first use in this function)
      if ((x<size1 && (y ==0 || y == size1-1)) || (y<size1 &&( x==0 || x == size-1)))
                                                                            ^
squares.c:57:76: note: each undeclared identifier is reported only once for each function it appears in
Could not compile your code

Overall Grade: FAILED
